src/net/sourceforge/kolmafia/ASH/Parser.java
/**
 * Copyright (c) 2005-2007, KoLmafia development team
 * http://kolmafia.sourceforge.net/
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 *
 *  [1] Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *  [2] Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in
 *      the documentation and/or other materials provided with the
 *      distribution.
 *  [3] Neither the name "KoLmafia" nor the names of its contributors may
 *      be used to endorse or promote products derived from this software
 *      without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
 * FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
 * COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
 * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
 * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION ) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE ) ARISING IN
 * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 * POSSIBILITY OF SUCH DAMAGE.
 */

package net.sourceforge.kolmafia.ASH;

import java.io.BufferedReader;
import java.io.File;
import java.io.IOException;
import java.io.InputStream;
import java.io.InputStreamReader;
import java.io.LineNumberReader;
import java.io.PrintStream;
import java.math.BigInteger;
import java.util.ArrayList;
import java.util.Iterator;
import java.util.List;
import java.util.Set;
import java.util.TreeMap;
import java.util.regex.Matcher;
import java.util.regex.Pattern;

import net.java.dev.spellcast.utilities.DataUtilities;

import net.sourceforge.kolmafia.KoLmafia;
import net.sourceforge.kolmafia.KoLmafiaASH;
import net.sourceforge.kolmafia.KoLmafiaCLI;
import net.sourceforge.kolmafia.KoLConstants;
import net.sourceforge.kolmafia.KoLConstants.ByteArrayStream;
import net.sourceforge.kolmafia.LogStream;
import net.sourceforge.kolmafia.RequestLogger;
import net.sourceforge.kolmafia.RequestThread;
import net.sourceforge.kolmafia.StaticEntity;
import net.sourceforge.kolmafia.ASH.DataTypes;
import net.sourceforge.kolmafia.ASH.ParseTree;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptAggregateType;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptAssignment;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptBasicScript;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptBreak;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptCall;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptCommand;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptCompositeReference;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptConditional;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptContinue;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptElse;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptElseIf;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptExistingFunction;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptExit;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptExpression;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptExpressionList;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptFor;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptForeach;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptFunction;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptFunctionList;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptIf;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptList;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptNamedType;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptOperator;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptRecord;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptRecordType;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptRepeat;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptReturn;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptScope;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptSymbol;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptSymbolTable;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptType;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptTypeInitializer;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptTypeList;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptUserDefinedFunction;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptValue;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptVariable;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptVariableList;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptVariableReference;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptVariableReferenceList;
import net.sourceforge.kolmafia.ASH.ParseTree.ScriptWhile;
import net.sourceforge.kolmafia.ASH.RuntimeLibrary;
import net.sourceforge.kolmafia.persistence.Preferences;
import net.sourceforge.kolmafia.request.EquipmentRequest;
import net.sourceforge.kolmafia.request.SendMailRequest;
import net.sourceforge.kolmafia.request.UseSkillRequest;

public class Parser
{
	// Variables used during parsing

	private static Parser currentAnalysis = null;

	private String fileName;
	private InputStream istream;

	private LineNumberReader commandStream;
	private String currentLine;
	private String nextLine;
	private int lineNumber;

	private String fullLine;

	private TreeMap imports;
	private ScriptFunction mainMethod = null;
	private String notifyRecipient = null;

	public Parser( final File scriptFile, final InputStream stream, final TreeMap imports )
	{
		if ( scriptFile != null )
		{
			this.fileName = scriptFile.getPath();
			this.istream = DataUtilities.getInputStream( scriptFile );
		}
		else if ( stream != null )
		{
			this.fileName = null;
			this.istream = stream;
		}
		else
		{
			this.fileName = null;
			this.istream = null;
			return;
		}

		try
		{
			this.commandStream = new LineNumberReader( new InputStreamReader( istream ) );
			this.currentLine = this.getNextLine();
			this.lineNumber = this.commandStream.getLineNumber();
			this.nextLine = this.getNextLine();
		}
		catch ( Exception e )
		{
			// If any part of the initialization fails,
			// then throw an exception.

			throw new AdvancedScriptException( this.fileName + " could not be accessed" );
		}

		this.imports = imports != null ? imports : new TreeMap();
	}

	private void disconnect()
	{
		try
		{
			this.commandStream = null;
			this.istream.close();
		}
		catch ( IOException e )
		{
		}
	}

	public ScriptScope parse()
	{
		Parser previousAnalysis = Parser.currentAnalysis;
                ScriptScope scope = null;

		try
		{
			Parser.currentAnalysis = this;
			scope = this.parseScope( null, null, new ScriptVariableList(), Parser.getExistingFunctionScope(), false );

			if ( this.currentLine != null )
			{
				throw new AdvancedScriptException( "Script parsing error" );
			}
		}
		finally
		{
			Parser.currentAnalysis = previousAnalysis;
			this.disconnect();
		}

		return scope;
	}

	public String getFileName()
	{
		return this.fileName;
	}

	public TreeMap getImports()
	{
		return this.imports;
	}

	public ScriptFunction getMainMethod()
	{
		return this.mainMethod;
	}

	public String getNotifyRecipient()
	{
		return this.notifyRecipient;
	}

	public static ScriptScope getExistingFunctionScope()
	{
		return new ScriptScope( RuntimeLibrary.functions, null, DataTypes.simpleTypes );
	}

	// **************** Parser *****************

	public static final char[] tokenList =
		{ ' ', '.', ',', '{', '}', '(', ')', '$', '!', '+', '-', '=', '"', '\'', '*', '^', '/', '%', '[', ']', '!', ';', '<', '>' };
	public static final String[] multiCharTokenList = { "==", "!=", "<=", ">=", "||", "&&", "/*", "*/" };

	// Feature control;
	// disabled until and if we choose to document the feature

	private static final boolean arrays = false;

	private static final ScriptSymbolTable reservedWords = new ScriptSymbolTable();

	static
	{
		// Constants
		reservedWords.addElement( new ScriptSymbol( "true" ) );
		reservedWords.addElement( new ScriptSymbol( "false" ) );

		// Operators
		reservedWords.addElement( new ScriptSymbol( "contains" ) );
		reservedWords.addElement( new ScriptSymbol( "remove" ) );

		// Control flow
		reservedWords.addElement( new ScriptSymbol( "if" ) );
		reservedWords.addElement( new ScriptSymbol( "else" ) );
		reservedWords.addElement( new ScriptSymbol( "foreach" ) );
		reservedWords.addElement( new ScriptSymbol( "in" ) );
		reservedWords.addElement( new ScriptSymbol( "for" ) );
		reservedWords.addElement( new ScriptSymbol( "from" ) );
		reservedWords.addElement( new ScriptSymbol( "upto" ) );
		reservedWords.addElement( new ScriptSymbol( "downto" ) );
		reservedWords.addElement( new ScriptSymbol( "by" ) );
		reservedWords.addElement( new ScriptSymbol( "while" ) );
		reservedWords.addElement( new ScriptSymbol( "repeat" ) );
		reservedWords.addElement( new ScriptSymbol( "until" ) );
		reservedWords.addElement( new ScriptSymbol( "break" ) );
		reservedWords.addElement( new ScriptSymbol( "continue" ) );
		reservedWords.addElement( new ScriptSymbol( "return" ) );
		reservedWords.addElement( new ScriptSymbol( "exit" ) );

		// Data types
		reservedWords.addElement( new ScriptSymbol( "void" ) );
		reservedWords.addElement( new ScriptSymbol( "boolean" ) );
		reservedWords.addElement( new ScriptSymbol( "int" ) );
		reservedWords.addElement( new ScriptSymbol( "float" ) );
		reservedWords.addElement( new ScriptSymbol( "string" ) );
		reservedWords.addElement( new ScriptSymbol( "buffer" ) );
		reservedWords.addElement( new ScriptSymbol( "matcher" ) );

		reservedWords.addElement( new ScriptSymbol( "item" ) );
		reservedWords.addElement( new ScriptSymbol( "location" ) );
		reservedWords.addElement( new ScriptSymbol( "class" ) );
		reservedWords.addElement( new ScriptSymbol( "stat" ) );
		reservedWords.addElement( new ScriptSymbol( "skill" ) );
		reservedWords.addElement( new ScriptSymbol( "effect" ) );
		reservedWords.addElement( new ScriptSymbol( "familiar" ) );
		reservedWords.addElement( new ScriptSymbol( "slot" ) );
		reservedWords.addElement( new ScriptSymbol( "monster" ) );
		reservedWords.addElement( new ScriptSymbol( "element" ) );

		reservedWords.addElement( new ScriptSymbol( "record" ) );
		reservedWords.addElement( new ScriptSymbol( "typedef" ) );
	}

	private static final boolean isReservedWord( final String name )
	{
		return Parser.reservedWords.findSymbol( name ) != null;
	}

	public ScriptScope importFile( final String fileName, final ScriptScope scope )
	{
		File scriptFile = KoLmafiaCLI.findScriptFile( fileName );
		if ( scriptFile == null )
		{
			throw new AdvancedScriptException( fileName + " could not be found" );
		}

		if ( this.imports.containsKey( scriptFile ) )
		{
			return scope;
		}

		AdvancedScriptException error = null;

		ScriptScope result = scope;

		Parser previousAnalysis = Parser.currentAnalysis;

		try
		{
			Parser parser = new Parser( scriptFile, null, this.imports );
			Parser.currentAnalysis = parser;
			result = parser.parseScope( scope, null, new ScriptVariableList(), scope.getParentScope(), false );
		}
		catch ( Exception e )
		{
			error = new AdvancedScriptException( e );
		}
		finally
		{
			Parser.currentAnalysis.disconnect();
		}

		if ( error == null && Parser.currentAnalysis.currentLine != null )
		{
			error = new AdvancedScriptException( "Script parsing error" );
		}

		Parser.currentAnalysis = previousAnalysis;

		if ( error != null )
		{
			throw error;
		}

		this.imports.put( scriptFile, new Long( scriptFile.lastModified() ) );
		this.mainMethod = null;

		return result;
	}

	private ScriptScope parseScope( final ScriptScope startScope, final ScriptType expectedType,
		final ScriptVariableList variables, final ScriptScope parentScope, final boolean whileLoop )
	{
		ScriptScope result;
		String importString;

		result = startScope == null ? new ScriptScope( variables, parentScope ) : startScope;
		this.parseNotify();

		while ( ( importString = this.parseImport() ) != null )
		{
			result = this.importFile( importString, result );
		}

		while ( true )
		{
			if ( this.parseTypedef( result ) )
			{
				if ( !this.currentToken().equals( ";" ) )
				{
					this.parseError( ";", this.currentToken() );
				}

				this.readToken(); //read ;
				continue;
			}

			ScriptType t = this.parseType( result, true, true );

			// If there is no data type, it's a command of some sort
			if ( t == null )
			{
				// See if it's a regular command
				ScriptCommand c = this.parseCommand( expectedType, result, false, whileLoop );
				if ( c != null )
				{
					result.addCommand( c );

					continue;
				}

				// No type and no command -> done.
				break;
			}

			// If this is a new record definition, enter it
			if ( t.getType() == DataTypes.TYPE_RECORD && this.currentToken() != null && this.currentToken().equals(
				";" ) )
			{
				this.readToken(); // read ;
				continue;
			}

			ScriptFunction f = this.parseFunction( t, result );
			if ( f != null )
			{
				if ( f.getName().equalsIgnoreCase( "main" ) )
				{
					this.mainMethod = f;
				}

				continue;
			}

			if ( this.parseVariables( t, result ) )
			{
				if ( !this.currentToken().equals( ";" ) )
				{
					this.parseError( ";", this.currentToken() );
				}

				this.readToken(); //read ;
				continue;
			}

			//Found a type but no function or variable to tie it to
			throw new AdvancedScriptException( "Script parse error" );
		}

		return result;
	}

	private ScriptType parseRecord( final ScriptScope parentScope )
	{
		if ( this.currentToken() == null || !this.currentToken().equalsIgnoreCase( "record" ) )
		{
			return null;
		}

		this.readToken(); // read record

		if ( this.currentToken() == null )
		{
			throw new AdvancedScriptException( "Record name expected" );
		}

		// Allow anonymous records
		String recordName = null;

		if ( !this.currentToken().equals( "{" ) )
		{
			// Named record
			recordName = this.currentToken();

			if ( !this.parseIdentifier( recordName ) )
			{
				throw new AdvancedScriptException( "Invalid record name '" + recordName + "'" );
			}

			if ( Parser.isReservedWord( recordName ) )
			{
				throw new AdvancedScriptException( "Reserved word '" + recordName + "' cannot be a record name" );
			}

			if ( parentScope.findType( recordName ) != null )
			{
				throw new AdvancedScriptException( "Record name '" + recordName + "' is already defined" );
			}

			this.readToken(); // read name
		}

		if ( this.currentToken() == null || !this.currentToken().equals( "{" ) )
		{
			this.parseError( "{", this.currentToken() );
		}

		this.readToken(); // read {

		// Loop collecting fields
		ArrayList fieldTypes = new ArrayList();
		ArrayList fieldNames = new ArrayList();

		while ( true )
		{
			// Get the field type
			ScriptType fieldType = this.parseType( parentScope, true, true );
			if ( fieldType == null )
			{
				throw new AdvancedScriptException( "Type name expected" );
			}

			// Get the field name
			String fieldName = this.currentToken();
			if ( fieldName == null )
			{
				throw new AdvancedScriptException( "Field name expected" );
			}

			if ( !this.parseIdentifier( fieldName ) )
			{
				throw new AdvancedScriptException( "Invalid field name '" + fieldName + "'" );
			}

			if ( Parser.isReservedWord( fieldName ) )
			{
				throw new AdvancedScriptException( "Reserved word '" + fieldName + "' cannot be used as a field name" );
			}

			if ( fieldNames.contains( fieldName ) )
			{
				throw new AdvancedScriptException( "Field name '" + fieldName + "' is already defined" );
			}

			this.readToken(); // read name

			if ( this.currentToken() == null || !this.currentToken().equals( ";" ) )
			{
				this.parseError( ";", this.currentToken() );
			}

			this.readToken(); // read ;

			fieldTypes.add( fieldType );
			fieldNames.add( fieldName.toLowerCase() );

			if ( this.currentToken() == null )
			{
				this.parseError( "}", "EOF" );
			}

			if ( this.currentToken().equals( "}" ) )
			{
				break;
			}
		}

		this.readToken(); // read }

		String[] fieldNameArray = new String[ fieldNames.size() ];
		ScriptType[] fieldTypeArray = new ScriptType[ fieldTypes.size() ];
		fieldNames.toArray( fieldNameArray );
		fieldTypes.toArray( fieldTypeArray );

		ScriptRecordType rec =
			new ScriptRecordType(
				recordName == null ? "(anonymous record)" : recordName, fieldNameArray, fieldTypeArray );

		if ( recordName != null )
		{
			// Enter into type table
			parentScope.addType( rec );
		}

		return rec;
	}

	private ScriptFunction parseFunction( final ScriptType functionType, final ScriptScope parentScope )
	{
		if ( !this.parseIdentifier( this.currentToken() ) )
		{
			return null;
		}

		if ( this.nextToken() == null || !this.nextToken().equals( "(" ) )
		{
			return null;
		}

		String functionName = this.currentToken();

		if ( Parser.isReservedWord( functionName ) )
		{
			throw new AdvancedScriptException( "Reserved word '" + functionName + "' cannot be used as a function name" );
		}

		this.readToken(); //read Function name
		this.readToken(); //read (

		ScriptVariableList paramList = new ScriptVariableList();
		ScriptVariableReferenceList variableReferences = new ScriptVariableReferenceList();

		while ( !this.currentToken().equals( ")" ) )
		{
			ScriptType paramType = this.parseType( parentScope, true, false );
			if ( paramType == null )
			{
				this.parseError( ")", this.currentToken() );
			}

			ScriptVariable param = this.parseVariable( paramType, null );
			if ( param == null )
			{
				this.parseError( "identifier", this.currentToken() );
			}

			if ( !paramList.addElement( param ) )
			{
				throw new AdvancedScriptException( "Variable " + param.getName() + " is already defined" );
			}

			if ( !this.currentToken().equals( ")" ) )
			{
				if ( !this.currentToken().equals( "," ) )
				{
					this.parseError( ")", this.currentToken() );
				}

				this.readToken(); //read comma
			}

			variableReferences.addElement( new ScriptVariableReference( param ) );
		}

		this.readToken(); //read )

		// Add the function to the parent scope before we parse the
		// function scope to allow recursion. Replace an existing
		// forward reference.

		ScriptUserDefinedFunction result =
			parentScope.replaceFunction( new ScriptUserDefinedFunction( functionName, functionType, variableReferences ) );
		if ( this.currentToken() != null && this.currentToken().equals( ";" ) )
		{
			// Yes. Return forward reference
			this.readToken(); // ;
			return result;
		}

		ScriptScope scope;
		if ( this.currentToken() != null && this.currentToken().equals( "{" ) )
		{
			// Scope is a block

			this.readToken(); // {

			scope = this.parseScope( null, functionType, paramList, parentScope, false );
			if ( this.currentToken() == null || !this.currentToken().equals( "}" ) )
			{
				this.parseError( "}", this.currentToken() );
			}

			this.readToken(); // }
		}
		else
		{
			// Scope is a single command
			scope = new ScriptScope( paramList, parentScope );
			scope.addCommand( this.parseCommand( functionType, parentScope, false, false ) );
		}

		result.setScope( scope );
		if ( !result.assertReturn() && !functionType.equals( DataTypes.TYPE_VOID )
		// The following clause can't be correct. I think it
		// depends on the various conditional & loop constructs
		// returning a boolean. Or something. But without it,
		// existing scripts break. Aargh!
		&& !functionType.equals( DataTypes.TYPE_BOOLEAN ) )
		{
			throw new AdvancedScriptException( "Missing return value" );
		}

		return result;
	}

	private boolean parseVariables( final ScriptType t, final ScriptScope parentScope )
	{
		while ( true )
		{
			ScriptVariable v = this.parseVariable( t, parentScope );
			if ( v == null )
			{
				return false;
			}

			if ( this.currentToken().equals( "," ) )
			{
				this.readToken(); //read ,
				continue;
			}

			return true;
		}
	}

	private ScriptVariable parseVariable( final ScriptType t, final ScriptScope scope )
	{
		if ( !this.parseIdentifier( this.currentToken() ) )
		{
			return null;
		}

		String variableName = this.currentToken();
		if ( Parser.isReservedWord( variableName ) )
		{
			throw new AdvancedScriptException( "Reserved word '" + variableName + "' cannot be a variable name" );
		}

		ScriptVariable result = new ScriptVariable( variableName, t );
		if ( scope != null && !scope.addVariable( result ) )
		{
			throw new AdvancedScriptException( "Variable " + result.getName() + " is already defined" );
		}

		this.readToken(); // If parsing of Identifier succeeded, go to next token.
		// If we are parsing a parameter declaration, we are done
		if ( scope == null )
		{
			if ( this.currentToken().equals( "=" ) )
			{
				throw new AdvancedScriptException( "Cannot initialize parameter " + result.getName() );
			}
			return result;
		}

		// Otherwise, we must initialize the variable.

		ScriptVariableReference lhs = new ScriptVariableReference( result.getName(), scope );
		ScriptExpression rhs;

		if ( this.currentToken().equals( "=" ) )
		{
			this.readToken(); // Eat the equals sign
			rhs = this.parseExpression( scope );
		}
		else
		{
			rhs = null;
		}

		scope.addCommand( new ScriptAssignment( lhs, rhs ) );
		return result;
	}

	private boolean parseTypedef( final ScriptScope parentScope )
	{
		if ( this.currentToken() == null || !this.currentToken().equalsIgnoreCase( "typedef" ) )
		{
			return false;
		}
		this.readToken(); // read typedef

		ScriptType t = this.parseType( parentScope, true, true );
		if ( t == null )
		{
			throw new AdvancedScriptException( "Missing data type for typedef" );
		}

		String typeName = this.currentToken();

		if ( !this.parseIdentifier( typeName ) )
		{
			throw new AdvancedScriptException( "Invalid type name '" + typeName + "'" );
		}

		if ( Parser.isReservedWord( typeName ) )
		{
			throw new AdvancedScriptException( "Reserved word '" + typeName + "' cannot be a type name" );
		}

		if ( parentScope.findType( typeName ) != null )
		{
			throw new AdvancedScriptException( "Type name '" + typeName + "' is already defined" );
		}

		this.readToken(); // read name

		// Add the type to the type table
		ScriptNamedType type = new ScriptNamedType( typeName, t );
		parentScope.addType( type );

		return true;
	}

	private ScriptCommand parseCommand( final ScriptType functionType, final ScriptScope scope, final boolean noElse,
		boolean whileLoop )
	{
		ScriptCommand result;

		if ( this.currentToken() == null )
		{
			return null;
		}

		if ( this.currentToken().equalsIgnoreCase( "break" ) )
		{
			if ( !whileLoop )
			{
				throw new AdvancedScriptException( "Encountered 'break' outside of loop" );
			}

			result = new ScriptBreak();
			this.readToken(); //break
		}

		else if ( this.currentToken().equalsIgnoreCase( "continue" ) )
		{
			if ( !whileLoop )
			{
				throw new AdvancedScriptException( "Encountered 'continue' outside of loop" );
			}

			result = new ScriptContinue();
			this.readToken(); //continue
		}

		else if ( this.currentToken().equalsIgnoreCase( "exit" ) )
		{
			result = new ScriptExit();
			this.readToken(); //exit
		}

		else if ( ( result = this.parseReturn( functionType, scope ) ) != null )
		{
			;
		}
		else if ( ( result = this.parseBasicScript() ) != null )
		{
			// basic_script doesn't have a ; token
			return result;
		}
		else if ( ( result = this.parseWhile( functionType, scope ) ) != null )
		{
			// while doesn't have a ; token
			return result;
		}
		else if ( ( result = this.parseForeach( functionType, scope ) ) != null )
		{
			// foreach doesn't have a ; token
			return result;
		}
		else if ( ( result = this.parseFor( functionType, scope ) ) != null )
		{
			// for doesn't have a ; token
			return result;
		}
		else if ( ( result = this.parseRepeat( functionType, scope ) ) != null )
		{
			;
		}
		else if ( ( result = this.parseConditional( functionType, scope, noElse, whileLoop ) ) != null )
		{
			// loop doesn't have a ; token
			return result;
		}
		else if ( ( result = this.parseCall( scope ) ) != null )
		{
			;
		}
		else if ( ( result = this.parseAssignment( scope ) ) != null )
		{
			;
		}
		else if ( ( result = this.parseRemove( scope ) ) != null )
		{
			;
		}
		else if ( ( result = this.parseValue( scope ) ) != null )
		{
			;
		}
		else
		{
			return null;
		}

		if ( this.currentToken() == null || !this.currentToken().equals( ";" ) )
		{
			this.parseError( ";", this.currentToken() );
		}

		this.readToken(); // ;
		return result;
	}

	private ScriptType parseType( final ScriptScope scope, final boolean aggregates, final boolean records )
	{
		if ( this.currentToken() == null )
		{
			return null;
		}

		ScriptType valType = scope.findType( this.currentToken() );
		if ( valType == null )
		{
			if ( records && this.currentToken().equalsIgnoreCase( "record" ) )
			{
				valType = this.parseRecord( scope );

				if ( valType == null )
				{
					return null;
				}

				if ( aggregates && this.currentToken().equals( "[" ) )
				{
					return this.parseAggregateType( valType, scope );
				}

				return valType;
			}

			return null;
		}

		this.readToken();

		if ( aggregates && this.currentToken().equals( "[" ) )
		{
			return this.parseAggregateType( valType, scope );
		}

		return valType;
	}

	private ScriptType parseAggregateType( final ScriptType dataType, final ScriptScope scope )
	{
		this.readToken(); // [ or ,
		if ( this.currentToken() == null )
		{
			throw new AdvancedScriptException( "Missing index token" );
		}

		if ( Parser.arrays && this.readIntegerToken( this.currentToken() ) )
		{
			int size = StaticEntity.parseInt( this.currentToken() );
			this.readToken(); // integer

			if ( this.currentToken() == null )
			{
				this.parseError( "]", this.currentToken() );
			}

			if ( this.currentToken().equals( "]" ) )
			{
				this.readToken(); // ]

				if ( this.currentToken().equals( "[" ) )
				{
					return new ScriptAggregateType( this.parseAggregateType( dataType, scope ), size );
				}

				return new ScriptAggregateType( dataType, size );
			}

			if ( this.currentToken().equals( "," ) )
			{
				return new ScriptAggregateType( this.parseAggregateType( dataType, scope ), size );
			}

			this.parseError( "]", this.currentToken() );
		}

		ScriptType indexType = scope.findType( this.currentToken() );
		if ( indexType == null )
		{
			throw new AdvancedScriptException( "Invalid type name '" + this.currentToken() + "'" );
		}

		if ( !indexType.isPrimitive() )
		{
			throw new AdvancedScriptException( "Index type '" + this.currentToken() + "' is not a primitive type" );
		}

		this.readToken(); // type name
		if ( this.currentToken() == null )
		{
			this.parseError( "]", this.currentToken() );
		}

		if ( this.currentToken().equals( "]" ) )
		{
			this.readToken(); // ]

			if ( this.currentToken().equals( "[" ) )
			{
				return new ScriptAggregateType( this.parseAggregateType( dataType, scope ), indexType );
			}

			return new ScriptAggregateType( dataType, indexType );
		}

		if ( this.currentToken().equals( "," ) )
		{
			return new ScriptAggregateType( this.parseAggregateType( dataType, scope ), indexType );
		}

		this.parseError( ", or ]", this.currentToken() );
		return null;
	}

	private boolean parseIdentifier( final String identifier )
	{
		if ( !Character.isLetter( identifier.charAt( 0 ) ) && identifier.charAt( 0 ) != '_' )
		{
			return false;
		}

		for ( int i = 1; i < identifier.length(); ++i )
		{
			if ( !Character.isLetterOrDigit( identifier.charAt( i ) ) && identifier.charAt( i ) != '_' )
			{
				return false;
			}
		}

		return true;
	}

	private ScriptReturn parseReturn( final ScriptType expectedType, final ScriptScope parentScope )
	{
		ScriptExpression expression = null;

		if ( this.currentToken() == null || !this.currentToken().equalsIgnoreCase( "return" ) )
		{
			return null;
		}

		this.readToken(); //return

		if ( this.currentToken() != null && this.currentToken().equals( ";" ) )
		{
			if ( expectedType != null && expectedType.equals( DataTypes.TYPE_VOID ) )
			{
				return new ScriptReturn( null, DataTypes.VOID_TYPE );
			}

			throw new AdvancedScriptException( "Return needs value" );
		}
		else
		{
			if ( ( expression = this.parseExpression( parentScope ) ) == null )
			{
				throw new AdvancedScriptException( "Expression expected" );
			}

			return new ScriptReturn( expression, expectedType );
		}
	}

	private ScriptConditional parseConditional( final ScriptType functionType, final ScriptScope parentScope,
		boolean noElse, final boolean loop )
	{
		if ( this.currentToken() == null || !this.currentToken().equalsIgnoreCase( "if" ) )
		{
			return null;
		}

		if ( this.nextToken() == null || !this.nextToken().equals( "(" ) )
		{
			this.parseError( "(", this.nextToken() );
		}

		this.readToken(); // if
		this.readToken(); // (

		ScriptExpression expression = this.parseExpression( parentScope );
		if ( this.currentToken() == null || !this.currentToken().equals( ")" ) )
		{
			this.parseError( ")", this.currentToken() );
		}

		if ( expression.getType() != DataTypes.BOOLEAN_TYPE )
		{
			throw new AdvancedScriptException( "\"if\" requires a boolean conditional expression" );
		}

		this.readToken(); // )

		ScriptIf result = null;
		boolean elseFound = false;
		boolean finalElse = false;

		do
		{
			ScriptScope scope;

			if ( this.currentToken() == null || !this.currentToken().equals( "{" ) ) //Scope is a single call
			{
				ScriptCommand command = this.parseCommand( functionType, parentScope, !elseFound, loop );
				scope = new ScriptScope( command, parentScope );
			}
			else
			{
